# csv_median_calculator

./: CMakeLists.txt  Makefile  README.md  config.toml  specs.md
examples/input/: btcusdt_level_2024.csv  btcusdt_trade_2024.csv
results/: median_results.csv
scripts/: README.md  generate_test_data.py
src/: a.out  csv_reader.cpp  csv_reader.hpp  csv_writer.cpp  csv_writer.hpp  file_scanner.cpp  file_scanner.hpp  main.cpp  median_calculator.cpp  median_calculator.hpp
src/data_manager/: data_manager.cpp  data_manager.hpp
src/file_handlers/: config_manager.cpp  config_manager.hpp  csv_reader.cpp  csv_reader.hpp  csv_writer.cpp  csv_writer.hpp  file_scanner.cpp  file_scanner.hpp
src/main_application/: main_application.cpp  main_application.hpp
src/median_calculator/: median_calculator.cpp  median_calculator.hpp
src/metrics_calculator/: metrics_calculator.cpp  metrics_calculator.hpp
